// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom-selector.css - css-verify 1`] = `
@custom-selector :--icon i[class^='icon-'], i[class*=' icon-'];
@custom-selector :--icon i[ class ^= 'icon-' ], i[ class *= ' icon-' ];
@custom-selector
:--icon
i[
class
^=
'icon-'
]
,
i[
class
*=
' icon-'
]
;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@custom-selector :--icon i[class^="icon-"], i[class*=" icon-"];
@custom-selector :--icon i[class^="icon-"], i[class*=" icon-"];
@custom-selector :--icon i[class^="icon-"], i[class*=" icon-"];

`;

exports[`custom-selector.css - css-verify 2`] = `
@custom-selector :--icon i[class^='icon-'], i[class*=' icon-'];
@custom-selector :--icon i[ class ^= 'icon-' ], i[ class *= ' icon-' ];
@custom-selector
:--icon
i[
class
^=
'icon-'
]
,
i[
class
*=
' icon-'
]
;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@custom-selector :--icon i[class^='icon-'], i[class*=' icon-'];
@custom-selector :--icon i[class^='icon-'], i[class*=' icon-'];
@custom-selector :--icon i[class^='icon-'], i[class*=' icon-'];

`;

exports[`insensitive.css - css-verify 1`] = `
input[type="radio" i] {}
img[alt~="person" i][src*="lorem" i] {}
section:has(:not([type="radio" i], [type="checkbox" i])) {}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
input[type="radio" i] {
}
img[alt~="person" i][src*="lorem" i] {
}
section:has(:not([type="radio" i], [type="checkbox" i])) {
}

`;

exports[`insensitive.css - css-verify 2`] = `
input[type="radio" i] {}
img[alt~="person" i][src*="lorem" i] {}
section:has(:not([type="radio" i], [type="checkbox" i])) {}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
input[type='radio' i] {
}
img[alt~='person' i][src*='lorem' i] {
}
section:has(:not([type='radio' i], [type='checkbox' i])) {
}

`;

exports[`namespaces.css - css-verify 1`] = `
@namespace foo "http://www.example.com";
[foo|att=val] {}
[*|att] {}
[|att] {}
[att] {}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@namespace foo "http://www.example.com";
[foo|att="val"] {
}
[*|att] {
}
[|att] {
}
[att] {
}

`;

exports[`namespaces.css - css-verify 2`] = `
@namespace foo "http://www.example.com";
[foo|att=val] {}
[*|att] {}
[|att] {}
[att] {}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@namespace foo 'http://www.example.com';
[foo|att='val'] {
}
[*|att] {
}
[|att] {
}
[att] {
}

`;

exports[`quotes.css - css-verify 1`] = `
a[id=test] {}
a[id="test"] {}
a[id='test'] {}
a[id=func("foo")] {}
a[class="(╯°□°）╯︵ ┻━┻"]{}
input:not([type="radio"]):not([type="checkbox"]) {}
input:not([type="radio"], [type="checkbox"]) {}
section:has(:not([type="radio"], [type="checkbox"])) {}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a[id="test"] {
}
a[id="test"] {
}
a[id="test"] {
}
a[id=func("foo")] {
}
a[class="(╯°□°）╯︵ ┻━┻"] {
}
input:not([type="radio"]):not([type="checkbox"]) {
}
input:not([type="radio"], [type="checkbox"]) {
}
section:has(:not([type="radio"], [type="checkbox"])) {
}

`;

exports[`quotes.css - css-verify 2`] = `
a[id=test] {}
a[id="test"] {}
a[id='test'] {}
a[id=func("foo")] {}
a[class="(╯°□°）╯︵ ┻━┻"]{}
input:not([type="radio"]):not([type="checkbox"]) {}
input:not([type="radio"], [type="checkbox"]) {}
section:has(:not([type="radio"], [type="checkbox"])) {}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a[id='test'] {
}
a[id='test'] {
}
a[id='test'] {
}
a[id=func('foo')] {
}
a[class='(╯°□°）╯︵ ┻━┻'] {
}
input:not([type='radio']):not([type='checkbox']) {
}
input:not([type='radio'], [type='checkbox']) {
}
section:has(:not([type='radio'], [type='checkbox'])) {
}

`;

exports[`spaces.css - css-verify 1`] = `
[lang] {}
[ lang] {}
[lang ] {}
[ lang ] {}
[  lang  ] {}
[
lang
] {}
span[lang] {}
span[ lang] {}
span[lang ] {}
span[ lang ] {}
span[  lang  ] {}
span[lang='pt'] {}
span[lang ='pt'] {}
span[lang= 'pt'] {}
span[lang = 'pt'] {}
span[lang  =  'pt'] {}
span[lang='pt' ] {}
span[lang='pt'  ] {}
span[
lang
=
'pt'
] {}
span[ lang ~= 'en-us' ] {}
span[  lang  ~=  'en-us'  ] {}
span[ lang |='zh' ] {}
span[
lang
~=
'en-us'
] {}
a[ href ^= '#' ] {}
a[ href $= '.cn' ] {}
a[ href *= 'example' ] {}
a[
href
*=
'example'
] {}
input[ type = 'radio' i ] {}
input[  type  =  'radio'  i  ] {}
input[ type ~= 'radio' i ] {}
input[  type  ~=  'radio'  i  ] {}
input[
type
~=
'radio'
i
] {}
img[ alt = 'person' ][ src = 'lorem' ] {}
img[ alt  =  'person' ][ src  =  'lorem' ] {}
img[ alt ~= 'person' ][ src *= 'lorem' ] {}
img[  alt  ~=  'person'  ][  src  *=  'lorem'  ] {}
img[
alt
~=
'person'
][
src
*=
'lorem'
] {}
section:has(:not([type='radio'], [type='checkbox'])) {}
section:has(:not([type='radio' i], [type='checkbox' i])) {}
section:has(:not([ type = 'radio' ], [ type = 'checkbox' ])) {}
section:has(:not([ type = 'radio' i ], [ type = 'checkbox' i ])) {}
section:has(:not([  type  =  'radio'  ], [  type  =  'checkbox'  ])) {}
section:has(:not([  type  =  'radio'  i  ], [  type  =  'checkbox'  i  ])) {}
section:has(:not([
type
=
'radio'
], [
type
=
'checkbox'
])) {}
section:has(:not([
type
=
'radio'
i
], [
type
=
'checkbox'
i
])) {}
[foo|att=val] {}
[ foo | att = val ] {}
[  foo  |  att  =  val  ] {}
[
foo
|
att
=
val
] {}
[*|att] {}
[ * | att ] {}
[  *  |  att  ] {}
[
*
|
att
] {}
[|att] {}
[ | att ] {}
[  |  att  ] {}
[
|
att
] {}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[lang] {
}
[lang] {
}
[lang] {
}
[lang] {
}
[lang] {
}
[lang] {
}
span[lang] {
}
span[lang] {
}
span[lang] {
}
span[lang] {
}
span[lang] {
}
span[lang="pt"] {
}
span[lang="pt"] {
}
span[lang="pt"] {
}
span[lang="pt"] {
}
span[lang="pt"] {
}
span[lang="pt"] {
}
span[lang="pt"] {
}
span[lang="pt"] {
}
span[lang~="en-us"] {
}
span[lang~="en-us"] {
}
span[lang|="zh"] {
}
span[lang~="en-us"] {
}
a[href^="#"] {
}
a[href$=".cn"] {
}
a[href*="example"] {
}
a[href*="example"] {
}
input[type="radio" i] {
}
input[type="radio" i] {
}
input[type~="radio" i] {
}
input[type~="radio" i] {
}
input[type~="radio" i] {
}
img[alt="person"][src="lorem"] {
}
img[alt="person"][src="lorem"] {
}
img[alt~="person"][src*="lorem"] {
}
img[alt~="person"][src*="lorem"] {
}
img[alt~="person"][src*="lorem"] {
}
section:has(:not([type="radio"], [type="checkbox"])) {
}
section:has(:not([type="radio" i], [type="checkbox" i])) {
}
section:has(:not([type="radio"], [type="checkbox"])) {
}
section:has(:not([type="radio" i], [type="checkbox" i])) {
}
section:has(:not([type="radio"], [type="checkbox"])) {
}
section:has(:not([type="radio" i], [type="checkbox" i])) {
}
section:has(:not([type="radio"], [type="checkbox"])) {
}
section:has(:not([type="radio" i], [type="checkbox" i])) {
}
[foo|att="val"] {
}
[foo|att="val"] {
}
[foo|att="val"] {
}
[foo|att="val"] {
}
[*|att] {
}
[*|att] {
}
[*|att] {
}
[*|att] {
}
[|att] {
}
[|att] {
}
[|att] {
}
[|att] {
}

`;

exports[`spaces.css - css-verify 2`] = `
[lang] {}
[ lang] {}
[lang ] {}
[ lang ] {}
[  lang  ] {}
[
lang
] {}
span[lang] {}
span[ lang] {}
span[lang ] {}
span[ lang ] {}
span[  lang  ] {}
span[lang='pt'] {}
span[lang ='pt'] {}
span[lang= 'pt'] {}
span[lang = 'pt'] {}
span[lang  =  'pt'] {}
span[lang='pt' ] {}
span[lang='pt'  ] {}
span[
lang
=
'pt'
] {}
span[ lang ~= 'en-us' ] {}
span[  lang  ~=  'en-us'  ] {}
span[ lang |='zh' ] {}
span[
lang
~=
'en-us'
] {}
a[ href ^= '#' ] {}
a[ href $= '.cn' ] {}
a[ href *= 'example' ] {}
a[
href
*=
'example'
] {}
input[ type = 'radio' i ] {}
input[  type  =  'radio'  i  ] {}
input[ type ~= 'radio' i ] {}
input[  type  ~=  'radio'  i  ] {}
input[
type
~=
'radio'
i
] {}
img[ alt = 'person' ][ src = 'lorem' ] {}
img[ alt  =  'person' ][ src  =  'lorem' ] {}
img[ alt ~= 'person' ][ src *= 'lorem' ] {}
img[  alt  ~=  'person'  ][  src  *=  'lorem'  ] {}
img[
alt
~=
'person'
][
src
*=
'lorem'
] {}
section:has(:not([type='radio'], [type='checkbox'])) {}
section:has(:not([type='radio' i], [type='checkbox' i])) {}
section:has(:not([ type = 'radio' ], [ type = 'checkbox' ])) {}
section:has(:not([ type = 'radio' i ], [ type = 'checkbox' i ])) {}
section:has(:not([  type  =  'radio'  ], [  type  =  'checkbox'  ])) {}
section:has(:not([  type  =  'radio'  i  ], [  type  =  'checkbox'  i  ])) {}
section:has(:not([
type
=
'radio'
], [
type
=
'checkbox'
])) {}
section:has(:not([
type
=
'radio'
i
], [
type
=
'checkbox'
i
])) {}
[foo|att=val] {}
[ foo | att = val ] {}
[  foo  |  att  =  val  ] {}
[
foo
|
att
=
val
] {}
[*|att] {}
[ * | att ] {}
[  *  |  att  ] {}
[
*
|
att
] {}
[|att] {}
[ | att ] {}
[  |  att  ] {}
[
|
att
] {}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[lang] {
}
[lang] {
}
[lang] {
}
[lang] {
}
[lang] {
}
[lang] {
}
span[lang] {
}
span[lang] {
}
span[lang] {
}
span[lang] {
}
span[lang] {
}
span[lang='pt'] {
}
span[lang='pt'] {
}
span[lang='pt'] {
}
span[lang='pt'] {
}
span[lang='pt'] {
}
span[lang='pt'] {
}
span[lang='pt'] {
}
span[lang='pt'] {
}
span[lang~='en-us'] {
}
span[lang~='en-us'] {
}
span[lang|='zh'] {
}
span[lang~='en-us'] {
}
a[href^='#'] {
}
a[href$='.cn'] {
}
a[href*='example'] {
}
a[href*='example'] {
}
input[type='radio' i] {
}
input[type='radio' i] {
}
input[type~='radio' i] {
}
input[type~='radio' i] {
}
input[type~='radio' i] {
}
img[alt='person'][src='lorem'] {
}
img[alt='person'][src='lorem'] {
}
img[alt~='person'][src*='lorem'] {
}
img[alt~='person'][src*='lorem'] {
}
img[alt~='person'][src*='lorem'] {
}
section:has(:not([type='radio'], [type='checkbox'])) {
}
section:has(:not([type='radio' i], [type='checkbox' i])) {
}
section:has(:not([type='radio'], [type='checkbox'])) {
}
section:has(:not([type='radio' i], [type='checkbox' i])) {
}
section:has(:not([type='radio'], [type='checkbox'])) {
}
section:has(:not([type='radio' i], [type='checkbox' i])) {
}
section:has(:not([type='radio'], [type='checkbox'])) {
}
section:has(:not([type='radio' i], [type='checkbox' i])) {
}
[foo|att='val'] {
}
[foo|att='val'] {
}
[foo|att='val'] {
}
[foo|att='val'] {
}
[*|att] {
}
[*|att] {
}
[*|att] {
}
[*|att] {
}
[|att] {
}
[|att] {
}
[|att] {
}
[|att] {
}

`;
